<resources>
    <string name="app_name">One More Goal</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fertig">Fertig</string>
    <string name="username_key">username</string>
    <string name="mein_fanname_ist">Mein Fanname ist</string>
    <string name="hallo_fussballfan_du_startest_one_more_goal_zum_ersten_mal_und_musst_deshalb_einen_fan_namen_waehlen">Hallo Fussballfan. Du startest One More Goal zum ersten Mal und musst deshalb einen Fan-Namen waehlen:</string>
    <string name="next_bet">Weiter</string>
    <string name="tippen">Tippen</string>
    <string name="zur_tabelle">Zur Tabelle</string>
    <string name="title_activity_bet_european_champion">Tipp den Europameister!</string>
    <string name="group">Group</string>
    <string name="_10_06_21_00_paris">10.06 / 21:00 / Paris</string>
    <string name="home_flag">home_flag</string>
    <string name="away_flag">away_flag</string>
    <string name="home">Home</string>
    <string name="vs_char">:</string>
    <string name="away">Away</string>
    <string name="ZeigeTips">Zeige Tipps</string>
</resources>
