<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.bowsern.omg.BetTodaysMatches"
    android:columnCount="3"
    android:rowCount="4"
    android:orientation="vertical">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight=".3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/group"
        android:id="@+id/placed_bets_detail_match_group"
        android:textAlignment="center"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/_10_06_21_00_paris"
        android:id="@+id/placed_bets_detail_match_date"
        android:textAlignment="center"
        android:layout_margin="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/placed_bets_detail_home_flag"
            android:layout_weight=".5"
            android:minHeight="64dp"
            android:contentDescription="@string/home_flag" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/placed_bets_detail_away_flag"
            android:layout_weight=".5"
            android:minHeight="64dp"
            android:contentDescription="@string/away_flag" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home"
            android:id="@+id/placed_bets_detail_home_name"
            android:layout_weight=".5"
            android:textAlignment="center"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/vs_char"
            android:id="@+id/textView2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/away"
            android:id="@+id/placed_bets_detail_away_name"
            android:textAlignment="center"
            android:layout_weight=".5"
            android:layout_margin="5dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/home"
            android:id="@+id/placed_bets_detail_home_score"
            android:layout_weight=".5"
            android:textAlignment="center"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/vs_char"
            android:id="@+id/textView3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/away"
            android:id="@+id/placed_bets_detail_away_score"
            android:textAlignment="center"
            android:layout_weight=".5"
            android:layout_margin="5dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="bets"
        android:id="@+id/placed_bets_detail_bets"
        android:textAlignment="center"
        android:layout_weight=".5"
        android:layout_margin="5dp" />
   <!-- <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_home"
            android:layout_weight=".5"
            android:layout_margin="5dp" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score_away"
            android:layout_weight=".5"
            android:layout_margin="5dp" />

    </LinearLayout>-->

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight=".5" />



</LinearLayout>
